Style results area

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="wrapper">
     <div class="inner-wrapper">
       <div>
-        <input type="text" id="ip" autofocus>
+        <input type="text" id="ip" autofocus placeholder="Enter IP Here">
       </div>
       <div id="result"></div>
     </div>
