Add header; no error on empty IP

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
   <div class="wrapper">
     <div class="inner-wrapper">
+      <h1>AWS IP Search</h1>
       <div>
         <input type="text" id="ip" autofocus placeholder="Enter IP Here">
       </div>
