--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       <div>
         <input type="text" id="ip" autofocus placeholder="Enter IP Here">
       </div>
+      <div id="example">
+        <a href="#">See example</a>
+      </div>
       <div id="result"></div>
     </div>
   </div>
