--- a/index.html
+++ b/index.html
@@ -10,11 +10,17 @@
   <div class="wrapper">
     <div class="inner-wrapper">
       <h1>AWS IP Search</h1>
+      <div id="subtitle">
+        <span id="example">
+          <a href="#">See example</a>
+        </span>
+        <span>|</span>
+        <span>
+          <a href="https://github.com/thameera/awsip">View source</a>
+        </span>
+      </div>
       <div>
         <input type="text" id="ip" autofocus placeholder="Enter IP Here">
-      </div>
-      <div id="example">
-        <a href="#">See example</a>
       </div>
       <div id="result"></div>
     </div>
