--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h1>AWS IP Search</h1>
       <div id="subtitle">
         <span id="example">
-          <a href="#">See example</a>
+          <a href="#">See random example</a>
         </span>
         <span>|</span>
         <span>
