--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
       <h1>AWS IP Search</h1>
       <div id="subtitle">
         <span id="example">
-          <a href="#">See random example</a>
+          <a href="#">See example</a>
         </span>
-        <span>|</span>
+        <span>፨</span>
         <span>
-          <a href="https://github.com/thameera/awsip">View source</a>
+          <a href="https://github.com/thameera/awsip" target="_window">View source</a>
         </span>
       </div>
       <div>
