--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>AWS IP Region Locator</title>
+  <title>AWS IP Search</title>
+  <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="icons/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
+  <link rel="shortcut icon" type="image/png" href="icons/favicon-32x32.png">
+  <link rel="shortcut icon" type="image/png" href="https://thameera.com/awsip/icons/favicon-32x32.png">
   <link href="./style.css" rel="stylesheet">
 </head>
 <body>
