s/See example/Random example

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h1>AWS IP Search</h1>
       <div id="subtitle">
         <span id="example">
-          <a href="#">See example</a>
+          <a href="#">Random example</a>
         </span>
         <span>፨</span>
         <span>
